# v2

./: .gitignore  .mise.sh  Cargo.toml  README.md  TODO  env.sh  hpcsrv.sh  hpcsrvTest.coffee  package.json  proto.sh  rust2proto.local.sh  rust2proto.sh
hpc-srv/: Cargo.toml
hpc-srv/src/: autogen.rs  lib.rs  main.rs
sh/: clippy.sh  init.sh  rustflag.sh  udeps.sh  upgrade.sh
