[package]
name = "hpc-srv"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "git@github.com:i18n-site/hpc-srv.git"
homepage = "https://github.com/i18n-site/hpc-srv"
description = "srv for hpcsrv"

[dependencies]
tracing = "0.1.41"
aok = "0.1.15"
xboot = "0.1.11"
pb = { path = "../../gen/pb" }
captcha = { version = "0.1.0", path = "../../mod/captcha" }
auth = { version = "0.1.0", path = "../../mod/auth" }
genv = "0.1.15"
hpc = { path = "../../../hpc/rust/hpc" }
axum_layer = "0.1.3"
axum = { version = "0.8.1", features = ["tracing", "macros"] }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
pb-jelly = "0.0.17"
